--- a/codes/code_1_data_prep.ipynb
+++ b/codes/code_1_data_prep.ipynb
@@ -182,7 +182,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. EXPORT"
+    "# 5. CREATE FEATURES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. EXPORT"
    ]
   },
   {
