add cutoff optimization; ES NOT FIXED

--- a/codes/code_1_data_prep.ipynb
+++ b/codes/code_1_data_prep.ipynb
@@ -13,13 +13,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "import os\n",
-    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper functions\n",
     "import functions\n",
-    "from functions import count_missings"
+    "from functions import *"
    ]
   },
   {
@@ -227,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
