--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -13,23 +13,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import lightgbm as lgb\n",
-    "\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
     "import scipy.stats\n",
-    "\n",
     "import os\n",
-    "import time\n",
-    "\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper functions\n",
     "import functions\n",
-    "from functions import prediction_reward"
+    "from functions import *"
    ]
   },
   {
@@ -270,13 +274,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##### RECHECK PROFIT\n",
+    "##### RECHECK PROFIT  \n",
     "prediction_reward(y, preds_oof)\n",
     "\n",
     "\n",
     "###### TRACKING RESULTS\n",
     "\n",
     "# lgb, 5 folds, default feats: 80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### OPTIMIZE CUTOFF\n",
+    "\n",
+    "# set step\n",
+    "step = 100\n",
+    "\n",
+    "# search\n",
+    "cutoffs = []\n",
+    "profits = []\n",
+    "for i in range(0, step):\n",
+    "    cutoffs.append(i / step)\n",
+    "    profits.append(recompute_reward(y, preds_oof, cutoff = cutoffs[i]))\n",
+    "    \n",
+    "# results\n",
+    "plt.figure(figsize = (10,4))\n",
+    "sns.lineplot(x = cutoffs, y = profits, color = 'red')\n",
+    "plt.tight_layout()\n",
+    "print('Optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])"
    ]
   },
   {
@@ -373,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
