try logloss (higher profit)

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -166,7 +166,7 @@
     "### PARAMETERS\n",
     "\n",
     "# settings\n",
-    "cores = 10\n",
+    "cores = 8\n",
     "seed  = 23\n",
     "\n",
     "# cross-validation\n",
@@ -235,6 +235,7 @@
     "    clf = clf.fit(trn_x, trn_y, \n",
     "                  eval_set              = [(trn_x, trn_y), (val_x, val_y)], \n",
     "                  eval_metric           = prediction_reward, \n",
+    "                 #eval_metric           = \"logloss\", \n",
     "                  verbose               = verbose, \n",
     "                  early_stopping_rounds = stopping)\n",
     "    clfs.append(clf)\n",
@@ -280,7 +281,8 @@
     "\n",
     "###### TRACKING RESULTS\n",
     "\n",
-    "# lgb, 5 folds, default feats: 80"
+    "# lgb, 5 folds, default feats:  80\n",
+    "# same model, metric = logloss: 85"
    ]
   },
   {
@@ -305,7 +307,8 @@
     "plt.figure(figsize = (10,4))\n",
     "sns.lineplot(x = cutoffs, y = profits, color = 'red')\n",
     "plt.tight_layout()\n",
-    "print('Optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])"
+    "print('- optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])\n",
+    "print('- optimal profit = %.4f' % profits[np.argmax(profits)])"
    ]
   },
   {
