adding new feature (total items)

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,18 +91,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500000, 12)\n"
+     ]
+    }
+   ],
    "source": [
     "# import CSV\n",
-    "df = pd.read_csv('../data/data_v1.csv')\n",
+    "df = pd.read_csv('../data/data_v2.csv')\n",
     "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1879, 12)\n",
+      "(498121, 12)\n"
+     ]
+    }
+   ],
    "source": [
     "# partitioning\n",
     "train = df[df[target].isnull() == False]\n",
@@ -125,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1879, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "# drop bad features\n",
     "excluded_feats = ['id']\n",
@@ -155,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +246,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training until validation scores don't improve for 500 rounds.\n",
+      "[100]\ttraining's profit: 415\tvalid_1's profit: 95\n",
+      "[200]\ttraining's profit: 415\tvalid_1's profit: 95\n",
+      "[300]\ttraining's profit: 415\tvalid_1's profit: 95\n",
+      "[400]\ttraining's profit: 415\tvalid_1's profit: 85\n",
+      "[500]\ttraining's profit: 415\tvalid_1's profit: 85\n",
+      "Early stopping, best iteration is:\n",
+      "[68]\ttraining's profit: 395\tvalid_1's profit: 95\n",
+      "----------------------\n",
+      "FOLD 1: PROFIT = 95\n",
+      "----------------------\n",
+      "\n",
+      "Training until validation scores don't improve for 500 rounds.\n",
+      "[100]\ttraining's profit: 405\tvalid_1's profit: 5\n",
+      "[200]\ttraining's profit: 415\tvalid_1's profit: 5\n",
+      "[300]\ttraining's profit: 415\tvalid_1's profit: 5\n",
+      "[400]\ttraining's profit: 415\tvalid_1's profit: 5\n",
+      "[500]\ttraining's profit: 415\tvalid_1's profit: 5\n",
+      "Early stopping, best iteration is:\n",
+      "[38]\ttraining's profit: 325\tvalid_1's profit: 15\n",
+      "----------------------\n",
+      "FOLD 2: PROFIT = 15\n",
+      "----------------------\n",
+      "\n",
+      "Training until validation scores don't improve for 500 rounds.\n",
+      "[100]\ttraining's profit: 415\tvalid_1's profit: 75\n",
+      "[200]\ttraining's profit: 415\tvalid_1's profit: 75\n",
+      "[300]\ttraining's profit: 415\tvalid_1's profit: 75\n",
+      "[400]\ttraining's profit: 415\tvalid_1's profit: 75\n",
+      "[500]\ttraining's profit: 415\tvalid_1's profit: 75\n",
+      "Early stopping, best iteration is:\n",
+      "[71]\ttraining's profit: 415\tvalid_1's profit: 55\n",
+      "----------------------\n",
+      "FOLD 3: PROFIT = 55\n",
+      "----------------------\n",
+      "\n",
+      "Training until validation scores don't improve for 500 rounds.\n"
+     ]
+    }
+   ],
    "source": [
     "### CROSS-VALIDATION LOOP\n",
     "for n_fold, (trn_idx, val_idx) in enumerate(folds.split(train, y)):\n",
@@ -282,7 +351,8 @@
     "###### TRACKING RESULTS\n",
     "\n",
     "# lgb, 5 folds, default feats:  80\n",
-    "# same model, metric = logloss: 85"
+    "# same model, metric = logloss: 85\n",
+    "# l:  80"
    ]
   },
   {
