clear all outputs

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,17 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500000, 12)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import CSV\n",
     "df = pd.read_csv('../data/data_v2.csv')\n",
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,18 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1879, 12)\n",
-      "(498121, 12)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# partitioning\n",
     "train = df[df[target].isnull() == False]\n",
@@ -142,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,17 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1879, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# drop bad features\n",
     "excluded_feats = ['id']\n",
@@ -180,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -230,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,51 +221,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training until validation scores don't improve for 500 rounds.\n",
-      "[100]\ttraining's profit: 415\tvalid_1's profit: 95\n",
-      "[200]\ttraining's profit: 415\tvalid_1's profit: 95\n",
-      "[300]\ttraining's profit: 415\tvalid_1's profit: 95\n",
-      "[400]\ttraining's profit: 415\tvalid_1's profit: 85\n",
-      "[500]\ttraining's profit: 415\tvalid_1's profit: 85\n",
-      "Early stopping, best iteration is:\n",
-      "[68]\ttraining's profit: 395\tvalid_1's profit: 95\n",
-      "----------------------\n",
-      "FOLD 1: PROFIT = 95\n",
-      "----------------------\n",
-      "\n",
-      "Training until validation scores don't improve for 500 rounds.\n",
-      "[100]\ttraining's profit: 405\tvalid_1's profit: 5\n",
-      "[200]\ttraining's profit: 415\tvalid_1's profit: 5\n",
-      "[300]\ttraining's profit: 415\tvalid_1's profit: 5\n",
-      "[400]\ttraining's profit: 415\tvalid_1's profit: 5\n",
-      "[500]\ttraining's profit: 415\tvalid_1's profit: 5\n",
-      "Early stopping, best iteration is:\n",
-      "[38]\ttraining's profit: 325\tvalid_1's profit: 15\n",
-      "----------------------\n",
-      "FOLD 2: PROFIT = 15\n",
-      "----------------------\n",
-      "\n",
-      "Training until validation scores don't improve for 500 rounds.\n",
-      "[100]\ttraining's profit: 415\tvalid_1's profit: 75\n",
-      "[200]\ttraining's profit: 415\tvalid_1's profit: 75\n",
-      "[300]\ttraining's profit: 415\tvalid_1's profit: 75\n",
-      "[400]\ttraining's profit: 415\tvalid_1's profit: 75\n",
-      "[500]\ttraining's profit: 415\tvalid_1's profit: 75\n",
-      "Early stopping, best iteration is:\n",
-      "[71]\ttraining's profit: 415\tvalid_1's profit: 55\n",
-      "----------------------\n",
-      "FOLD 3: PROFIT = 55\n",
-      "----------------------\n",
-      "\n",
-      "Training until validation scores don't improve for 500 rounds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### CROSS-VALIDATION LOOP\n",
     "for n_fold, (trn_idx, val_idx) in enumerate(folds.split(train, y)):\n",
@@ -351,8 +282,7 @@
     "###### TRACKING RESULTS\n",
     "\n",
     "# lgb, 5 folds, default feats:  80\n",
-    "# same model, metric = logloss: 85\n",
-    "# l:  80"
+    "# add feature = total items:    250"
    ]
   },
   {
@@ -417,7 +347,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'lgb_v1'\n",
+    "model = 'lgb_v2'\n",
     "perf  = str(round(cv_perf, 6))[2:8]\n",
     "name  = model + '_' + perf"
    ]
@@ -444,18 +374,6 @@
     "sub = pd.DataFrame({'id': test['id'], 'fraud': preds_test})\n",
     "sub['fraud'] = np.round(sub['fraud']).astype('int')\n",
     "sub.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export submission\n",
-    "sub = sub['fraud']\n",
-    "sub.to_csv('../submissions/' + str(name) + '.csv', index = False)\n",
-    "sub.shape"
    ]
   }
  ],
