add new feature, use logloss for early stop (works better so far)

--- a/codes/code_1_data_prep.ipynb
+++ b/codes/code_1_data_prep.ipynb
@@ -200,7 +200,8 @@
    "outputs": [],
    "source": [
     "# total number of items\n",
-    "df['total_items'] = (df['totalScanTimeInSeconds'] * df['scannedLineItemsPerSecond']).astype('int')"
+    "df['total_items'] = (df['totalScanTimeInSeconds'] * df['scannedLineItemsPerSecond']).astype('int')\n",
+    "df['weird_actions'] = (df['lineItemVoids'] + df['scansWithoutRegistration'] + df['quantityModifications']).astype('int')"
    ]
   },
   {
@@ -217,7 +218,7 @@
    "outputs": [],
    "source": [
     "# export CSV\n",
-    "df.to_csv('../data/data_v2.csv', index = False)\n",
+    "df.to_csv('../data/data_v3s.csv', index = False)\n",
     "df.shape"
    ]
   }
