--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# import CSV\n",
-    "df = pd.read_csv('../data/data_v2.csv')\n",
+    "df = pd.read_csv('../data/data_v3.csv')\n",
     "print(df.shape)"
    ]
   },
@@ -176,13 +176,13 @@
     "# muner of rounds\n",
     "max_rounds = 10000\n",
     "stopping   = 500\n",
-    "verbose    = 100\n",
+    "verbose    = 200\n",
     "\n",
     "# LGB parameters\n",
     "lgb_params = {\n",
-    "    'boosting_type':   'gbdt',\n",
-    "    'objective':       'binary',\n",
-    "    'metric':          'None',\n",
+    "    'boosting_type':    'gbdt',\n",
+    "    'objective':        'binary',\n",
+    "    'metric':           'none',\n",
     "    'subsample':        0.9,\n",
     "    'feature_fraction': 0.8,\n",
     "    'lambda_l1':        0.1,\n",
@@ -234,8 +234,8 @@
     "    clf = lgb.LGBMClassifier(**lgb_params) \n",
     "    clf = clf.fit(trn_x, trn_y, \n",
     "                  eval_set              = [(trn_x, trn_y), (val_x, val_y)], \n",
-    "                  eval_metric           = prediction_reward, \n",
-    "                 #eval_metric           = \"logloss\", \n",
+    "                  #eval_metric           = prediction_reward, \n",
+    "                  eval_metric           = \"logloss\", \n",
     "                  verbose               = verbose, \n",
     "                  early_stopping_rounds = stopping)\n",
     "    clfs.append(clf)\n",
@@ -281,8 +281,32 @@
     "\n",
     "###### TRACKING RESULTS\n",
     "\n",
-    "# lgb, 5 folds, default feats:  80\n",
-    "# add feature = total items:    250"
+    "# V1: lgb, 5 folds, default feats:  80\n",
+    "# V2: add feature = total items:    250\n",
+    "# V3: logloss for ES, not profit:   260\n",
+    "# V4: add feature = weird actions:  275"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### VARIABLE IMPORTANCE\n",
+    "\n",
+    "# load importance    \n",
+    "top_feats = 100\n",
+    "cols = importances[['Feature', 'Importance']].groupby('Feature').mean().sort_values(by = 'Importance', ascending = False)[0:top_feats].index\n",
+    "importance = importances.loc[importances.Feature.isin(cols)]\n",
+    "    \n",
+    "# plot variable importance\n",
+    "plt.figure(figsize = (10,6))\n",
+    "sns.barplot(x = 'Importance', y = 'Feature', data = importance.sort_values(by = 'Importance', ascending = False))\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# save plot as pdf\n",
+    "plt.savefig('../var_importance.pdf')"
    ]
   },
   {
@@ -312,28 +336,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### VARIABLE IMPORTANCE\n",
-    "\n",
-    "# load importance    \n",
-    "top_feats = 100\n",
-    "cols = importances[['Feature', 'Importance']].groupby('Feature').mean().sort_values(by = 'Importance', ascending = False)[0:top_feats].index\n",
-    "importance = importances.loc[importances.Feature.isin(cols)]\n",
-    "    \n",
-    "# plot variable importance\n",
-    "plt.figure(figsize = (8,5))\n",
-    "sns.barplot(x = 'Importance', y = 'Feature', data = importance.sort_values(by = 'Importance', ascending = False))\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# save plot as pdf\n",
-    "plt.savefig('../var_importance.pdf')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -347,8 +349,8 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'lgb_v2'\n",
-    "perf  = str(round(cv_perf, 6))[2:8]\n",
+    "model = 'lgb_v4'\n",
+    "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
   },
@@ -374,6 +376,18 @@
     "sub = pd.DataFrame({'id': test['id'], 'fraud': preds_test})\n",
     "sub['fraud'] = np.round(sub['fraud']).astype('int')\n",
     "sub.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export submission\n",
+    "sub = sub[['fraud']]\n",
+    "sub.to_csv('../submissions/' + str(name) + '.csv', index = False)\n",
+    "sub.shape"
    ]
   }
  ],
