add SMOTE for minority class

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -166,7 +166,7 @@
     "### PARAMETERS\n",
     "\n",
     "# settings\n",
-    "cores = 8\n",
+    "cores = 10\n",
     "seed  = 23\n",
     "\n",
     "# cross-validation\n",
@@ -223,12 +223,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SMOTE settings\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE(random_state = 23, n_jobs = 10, sampling_strategy = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "### CROSS-VALIDATION LOOP\n",
     "for n_fold, (trn_idx, val_idx) in enumerate(folds.split(train, y)):\n",
     "    \n",
     "    # data partitioning\n",
     "    trn_x, trn_y = train[features].iloc[trn_idx], y.iloc[trn_idx]\n",
     "    val_x, val_y = train[features].iloc[val_idx], y.iloc[val_idx]\n",
+    "    \n",
+    "    # augment training data with SMOTE\n",
+    "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
+    "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
+    "    trn_y = pd.Series(trn_y)\n",
     "        \n",
     "    # train lightGBM\n",
     "    print('Custom early stopping: select the best out of %.0f iterations...' % max_rounds)\n",
@@ -288,11 +304,12 @@
     "\n",
     "###### TRACKING RESULTS\n",
     "\n",
-    "# V1: lgb, 5 folds, default feats:  80\n",
-    "# V2: add feature = total items:    250\n",
-    "# V3: logloss for ES, not profit:   260\n",
-    "# V4: add feature = weird actions:  275\n",
-    "# V5: custom earlystop for profit:  320"
+    "# V1: lgb, 5 folds, default features:   80\n",
+    "# V2: add feature:  no. total items:   250\n",
+    "# V3: use logloss for ES, not profit:  260\n",
+    "# V4: add feature: no. weird actions:  275\n",
+    "# V5: custom earlystop for profit:     320\n",
+    "# V6: add SMOTE for minority class:    335"
    ]
   },
   {
@@ -357,7 +374,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'lgb_v5'\n",
+    "model = 'lgb_v6'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
