CV-based mean target encoding (does not improve profit)

--- a/codes/code_1_data_prep.ipynb
+++ b/codes/code_1_data_prep.ipynb
@@ -218,7 +218,7 @@
    "outputs": [],
    "source": [
     "# export CSV\n",
-    "df.to_csv('../data/data_v3s.csv', index = False)\n",
+    "df.to_csv('../data/data_v3.csv', index = False)\n",
     "df.shape"
    ]
   }
