--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# target encoding\n",
+    "# target variable\n",
     "y = train[target]\n",
     "del train[target], test[target]"
    ]
@@ -175,7 +175,7 @@
     "\n",
     "# muner of rounds\n",
     "max_rounds = 600\n",
-    "stopping   = 500\n",
+    "stopping   = 600\n",
     "verbose    = 200\n",
     "\n",
     "# LGB parameters\n",
@@ -245,6 +245,10 @@
     "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
     "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
     "    trn_y = pd.Series(trn_y)\n",
+    "    \n",
+    "    # mean target encoding\n",
+    "    #trn_x, val_x, tmp_test = mean_target_encoding(trn_x, val_x, test, features = ['trustLevel'], target = 'fraud', folds = 5)\n",
+    "    #features = [f for f in trn_x.columns if f not in excluded_feats]\n",
     "        \n",
     "    # train lightGBM\n",
     "    print('Custom early stopping: select the best out of %.0f iterations...' % max_rounds)\n",
@@ -266,7 +270,8 @@
     "    preds_oof[val_idx]    = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    valid_profit[n_fold]  = prediction_reward(val_y, preds_oof[val_idx])[1]\n",
     "    preds_test           += clf.predict_proba(test[features], num_iteration = best_iter)[:, 1] / folds.n_splits \n",
-    "    \n",
+    "    #preds_test           += clf.predict_proba(tmp_test[features], num_iteration = best_iter)[:, 1] / folds.n_splits \n",
+    "\n",
     "    # importance\n",
     "    fold_importance_df = pd.DataFrame()\n",
     "    fold_importance_df['Feature'] = features\n",
@@ -284,6 +289,9 @@
     "    del trn_x, trn_y, val_x, val_y\n",
     "    gc.collect()\n",
     "    \n",
+    "    # uncomment with mean target encoding\n",
+    "    #features = [f for f in train.columns if f not in excluded_feats]\n",
+    "\n",
     "    \n",
     "# print overall performance    \n",
     "cv_perf = np.sum(valid_profit)\n",
