add robust data scaling (profit = 350)

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -241,10 +241,19 @@
     "    trn_x, trn_y = train[features].iloc[trn_idx], y.iloc[trn_idx]\n",
     "    val_x, val_y = train[features].iloc[val_idx], y.iloc[val_idx]\n",
     "    \n",
+    "    # scale data\n",
+    "    scaler   = RobustScaler()\n",
+    "    trn_x    = scaler.fit_transform(trn_x)\n",
+    "    val_x    = scaler.transform(val_x)\n",
+    "    tmp_test = scaler.transform(test[features])\n",
+    "\n",
     "    # augment training data with SMOTE\n",
     "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
     "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
     "    trn_y = pd.Series(trn_y)\n",
+    "    \n",
+    "    # add noise to train to reduce overfitting\n",
+    "    #trn_x += np.random.normal(0, 0.01, trn_x.shape)\n",
     "    \n",
     "    # mean target encoding\n",
     "    #trn_x, val_x, tmp_test = mean_target_encoding(trn_x, val_x, test, features = ['trustLevel'], target = 'fraud', folds = 5)\n",
@@ -269,8 +278,7 @@
     "    # predictions\n",
     "    preds_oof[val_idx]    = clf.predict_proba(val_x, num_iteration = best_iter)[:, 1]\n",
     "    valid_profit[n_fold]  = prediction_reward(val_y, preds_oof[val_idx])[1]\n",
-    "    preds_test           += clf.predict_proba(test[features], num_iteration = best_iter)[:, 1] / folds.n_splits \n",
-    "    #preds_test           += clf.predict_proba(tmp_test[features], num_iteration = best_iter)[:, 1] / folds.n_splits \n",
+    "    preds_test           += clf.predict_proba(tmp_test, num_iteration = best_iter)[:, 1] / folds.n_splits \n",
     "\n",
     "    # importance\n",
     "    fold_importance_df = pd.DataFrame()\n",
@@ -317,7 +325,8 @@
     "# V3: use logloss for ES, not profit:  260\n",
     "# V4: add feature: no. weird actions:  275\n",
     "# V5: custom earlystop for profit:     320\n",
-    "# V6: add SMOTE for minority class:    335"
+    "# V6: add SMOTE for minority class:    335\n",
+    "# V7: add robust data scaling:         350 "
    ]
   },
   {
@@ -382,7 +391,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'lgb_v6'\n",
+    "model = 'lgb_v7'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
@@ -421,6 +430,18 @@
     "sub = sub[['fraud']]\n",
     "sub.to_csv('../submissions/' + str(name) + '.csv', index = False)\n",
     "sub.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check correlation with previous submission\n",
+    "prev_sub = pd.read_csv('../submissions/lgb_v6_335.csv')\n",
+    "cor = np.sum(prev_sub[target] == sub.reset_index()[target]) / len(sub)\n",
+    "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
   }
  ],
