list more LGB parameters (for future tuning)

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -166,7 +166,7 @@
     "### PARAMETERS\n",
     "\n",
     "# settings\n",
-    "cores = 10\n",
+    "cores = 12\n",
     "seed  = 23\n",
     "\n",
     "# cross-validation\n",
@@ -180,23 +180,25 @@
     "\n",
     "# LGB parameters\n",
     "lgb_params = {\n",
-    "    'boosting_type':    'gbdt',\n",
-    "    'objective':        'binary',\n",
-    "    'metric':           'none',\n",
-    "    'subsample':        0.9,\n",
-    "    'feature_fraction': 0.8,\n",
-    "    'lambda_l1':        0.1,\n",
-    "    'lambda_l2':        0.1,\n",
-    "    'min_split_gain':   0.01,\n",
-    "    'min_child_weight': 2,\n",
-    "    'silent':           True,\n",
-    "    'verbosity':        -1,\n",
-    "    'learning_rate':    0.05,\n",
-    "    'max_depth':        7,\n",
-    "    'num_leaves':       70,\n",
-    "    'n_estimators':     max_rounds,\n",
-    "    'nthread' :         cores,\n",
-    "    'random_state':     seed,\n",
+    "    'boosting_type':     'gbdt',\n",
+    "    'objective':         'binary',\n",
+    "    'metrics':           'binary_logloss',\n",
+    "    'subsample':         0.9,\n",
+    "    'feature_fraction':  0.8,\n",
+    "    'lambda_l1':         0.1,\n",
+    "    'lambda_l2':         0.1,\n",
+    "    'min_split_gain':    0.01,\n",
+    "    'min_child_weight':  2,\n",
+    "    'min_child_samples': 20,\n",
+    "    'silent':            True,\n",
+    "    'verbosity':         -1,\n",
+    "    'learning_rate':     0.05,\n",
+    "    'max_depth':         7,\n",
+    "    'num_leaves':        70,\n",
+    "    'scale_pos_weight':  1,\n",
+    "    'n_estimators':      max_rounds,\n",
+    "    'nthread' :          cores,\n",
+    "    'random_state':      seed,\n",
     "}\n",
     "\n",
     "# data partitinoing\n",
@@ -251,7 +253,7 @@
     "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
     "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
     "    trn_y = pd.Series(trn_y)\n",
-    "    \n",
+    "      \n",
     "    # add noise to train to reduce overfitting\n",
     "    #trn_x += np.random.normal(0, 0.01, trn_x.shape)\n",
     "    \n",
@@ -266,10 +268,12 @@
     "                  eval_set              = [(trn_x, trn_y), (val_x, val_y)], \n",
     "                  eval_metric           = prediction_reward, \n",
     "                  #eval_metric           = \"logloss\", \n",
+    "                  #early_stopping_rounds = stopping,\n",
     "                  verbose               = verbose)\n",
     "    clfs.append(clf)\n",
     "    \n",
     "    # find the best iteration\n",
+    "    #best_iter = clf.best_iteration_\n",
     "    best_iter = np.argmax(clf.evals_result_['valid_1']['profit']) + 1\n",
     "    print('Best iteration is:')\n",
     "    print('[' + str(best_iter) + ']   valid_1 profit: ' + \n",
@@ -280,7 +284,7 @@
     "    valid_profit[n_fold]  = prediction_reward(val_y, preds_oof[val_idx])[1]\n",
     "    preds_test           += clf.predict_proba(tmp_test, num_iteration = best_iter)[:, 1] / folds.n_splits \n",
     "\n",
-    "    # importance\n",
+    "    ## importance\n",
     "    fold_importance_df = pd.DataFrame()\n",
     "    fold_importance_df['Feature'] = features\n",
     "    fold_importance_df['Importance'] = clf.feature_importances_\n",
@@ -292,14 +296,14 @@
     "    print('FOLD%2d: PROFIT = %.0f' % (n_fold + 1, valid_profit[n_fold]))\n",
     "    print('----------------------')\n",
     "    print('')\n",
-    "    \n",
+    "        \n",
     "    # clear memory\n",
     "    del trn_x, trn_y, val_x, val_y\n",
     "    gc.collect()\n",
     "    \n",
     "    # uncomment with mean target encoding\n",
     "    #features = [f for f in train.columns if f not in excluded_feats]\n",
-    "\n",
+    "    \n",
     "    \n",
     "# print overall performance    \n",
     "cv_perf = np.sum(valid_profit)\n",
