--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import RobustScaler\n",
     "import scipy.stats\n",
     "import os\n",
     "import time"
@@ -465,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
