save cutoff selection plot

--- a/codes/code_2_lgb.ipynb
+++ b/codes/code_2_lgb.ipynb
@@ -247,8 +247,8 @@
     "    # scale data\n",
     "    scaler   = RobustScaler()\n",
     "    trn_x    = scaler.fit_transform(trn_x)\n",
-    "    val_x    = scaler.transform(val_x)\n",
-    "    tmp_test = scaler.transform(test[features])\n",
+    "    val_x    = pd.DataFrame(scaler.transform(val_x),          columns = features)\n",
+    "    tmp_test = pd.DataFrame(scaler.transform(test[features]), columns = features)\n",
     "\n",
     "    # augment training data with SMOTE\n",
     "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
@@ -373,13 +373,15 @@
     "for i in range(0, step):\n",
     "    cutoffs.append(i / step)\n",
     "    profits.append(recompute_reward(y, preds_oof, cutoff = cutoffs[i]))\n",
-    "    \n",
+    "        \n",
     "# results\n",
     "plt.figure(figsize = (10,4))\n",
-    "sns.lineplot(x = cutoffs, y = profits, color = 'red')\n",
+    "sns.lineplot(x = cutoffs[10:step], y = profits[10:step], color = 'red')\n",
     "plt.tight_layout()\n",
+    "plt.axvline(x = cutoffs[np.argmax(profits)], color = 'black', linestyle = '--')\n",
     "print('- optimal cutoff = %.4f' % cutoffs[np.argmax(profits)])\n",
-    "print('- optimal profit = %.4f' % profits[np.argmax(profits)])"
+    "print('- optimal profit = %.4f' % profits[np.argmax(profits)])\n",
+    "plt.savefig('../cutoff_selection.pdf')"
    ]
   },
   {
@@ -466,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
