--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -193,7 +193,7 @@
     "    'min_child_samples': 20,\n",
     "    'silent':            True,\n",
     "    'verbosity':         -1,\n",
-    "    'learning_rate':     0.05,\n",
+    "    'learning_rate':     0.1,\n",
     "    'max_depth':         7,\n",
     "    'num_leaves':        70,\n",
     "    'scale_pos_weight':  1,\n",
@@ -331,7 +331,8 @@
     "# V4: add feature: no. weird actions:  275\n",
     "# V5: custom earlystop for profit:     320\n",
     "# V6: add SMOTE for minority class:    335\n",
-    "# V7: add robust data scaling:         350 "
+    "# V7: add robust data scaling:         350\n",
+    "# V8: increase learning rate to 0.1:   375     "
    ]
   },
   {
@@ -398,7 +399,7 @@
    "outputs": [],
    "source": [
     "# file name\n",
-    "model = 'lgb_v7'\n",
+    "model = 'lgb_v8'\n",
     "perf  = str(round(cv_perf, 0).astype('int'))\n",
     "name  = model + '_' + perf"
    ]
@@ -446,7 +447,7 @@
    "outputs": [],
    "source": [
     "# check correlation with previous submission\n",
-    "prev_sub = pd.read_csv('../submissions/lgb_v6_335.csv')\n",
+    "prev_sub = pd.read_csv('../submissions/lgb_v7_350.csv')\n",
     "cor = np.sum(prev_sub[target] == sub.reset_index()[target]) / len(sub)\n",
     "print(\"Share of the same predictions: \" + str(np.round(cor, 6)))"
    ]
