track performance inindividual folds for more accurate comparison

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -331,8 +331,8 @@
     "# V4: add feature: no. weird actions:  275\n",
     "# V5: custom earlystop for profit:     320\n",
     "# V6: add SMOTE for minority class:    335\n",
-    "# V7: add robust data scaling:         350\n",
-    "# V8: increase learning rate to 0.1:   375     "
+    "# V7: add robust data scaling:         350 = 95 + 55 + 75 + 35 + 90\n",
+    "# V8: increase learning rate to 0.1:   375 = 95 + 65 + 75 + 50 + 90"
    ]
   },
   {
