try PCA (substantially decreases profit, coul be an error)

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -21,6 +21,7 @@
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.preprocessing import RobustScaler\n",
+    "from sklearn.decomposition import PCA\n",
     "import scipy.stats\n",
     "import os\n",
     "import time"
@@ -87,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. DATA PARTITIONING"
+    "# 2. DATA PREPARATION"
    ]
   },
   {
@@ -143,6 +144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PARAMETERS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -152,6 +160,23 @@
     "excluded_feats = ['id']\n",
     "features = [f for f in train.columns if f not in excluded_feats]\n",
     "print(train[features].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# perform PCA\n",
+    "#num_comp = 5\n",
+    "#pca = PCA(n_components = num_comp)\n",
+    "#pca.fit(train[features].values)\n",
+    "#train = pd.DataFrame(pca.transform(train[features].values), columns = ['v' + str(v) for v in range(0, num_comp)])\n",
+    "#test  = pd.DataFrame(pca.transform(test[features].values),  columns = ['v' + str(v) for v in range(0, num_comp)])\n",
+    "#features = list(train.columns)\n",
+    "#print(train[features].shape)\n",
+    "#print(test[features].shape)"
    ]
   },
   {
@@ -229,6 +254,13 @@
     "# SMOTE settings\n",
     "from imblearn.over_sampling import SMOTE\n",
     "sm = SMOTE(random_state = 23, n_jobs = 10, sampling_strategy = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CROSS-VALIDATION"
    ]
   },
   {
@@ -355,6 +387,13 @@
     "\n",
     "# save plot as pdf\n",
     "plt.savefig('../var_importance.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CUTOFF OPTIMIZATION"
    ]
   },
   {
