document CV parameters for reference

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -355,7 +355,7 @@
     "prediction_reward(y, preds_oof)\n",
     "\n",
     "\n",
-    "###### TRACKING RESULTS\n",
+    "###### TRACKING RESULTS (5 folds, strat = True, seed = 23)\n",
     "\n",
     "# V1: lgb, 5 folds, default features:   80\n",
     "# V2: add feature:  no. total items:   250\n",
