--- a/codes/code_3_stacking.ipynb
+++ b/codes/code_3_stacking.ipynb
@@ -331,7 +331,7 @@
     "prediction_reward(y, preds_oof)\n",
     "\n",
     "\n",
-    "###### TRACKING RESULTS\n",
+    "###### TRACKING RESULTS (5 folds, start = True, seed = 999)\n",
     "\n",
     "# stacking 8 models: 390 = 85 + 65 + 45 + 105 + 90"
    ]
