added PCA,FastICA,FactorAnalysis for testing results are shit so far!

--- a/codes/code_2_lgb_main.ipynb
+++ b/codes/code_2_lgb_main.ipynb
@@ -21,7 +21,8 @@
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.preprocessing import RobustScaler\n",
-    "from sklearn.decomposition import PCA\n",
+    "from sklearn.decomposition import PCA, FastICA, FactorAnalysis\n",
+    "import copy\n",
     "import scipy.stats\n",
     "import os\n",
     "import time"
@@ -276,6 +277,7 @@
     "    trn_x, trn_y = train[features].iloc[trn_idx], y.iloc[trn_idx]\n",
     "    val_x, val_y = train[features].iloc[val_idx], y.iloc[val_idx]\n",
     "    \n",
+    "    \n",
     "    # scale data\n",
     "    scaler   = RobustScaler()\n",
     "    trn_x    = scaler.fit_transform(trn_x)\n",
@@ -286,7 +288,16 @@
     "    trn_x, trn_y = sm.fit_sample(trn_x, trn_y)\n",
     "    trn_x = pd.DataFrame(trn_x, columns = features)\n",
     "    trn_y = pd.Series(trn_y)\n",
-    "      \n",
+    "    \n",
+    "    tmp_features = copy.deepcopy(features)\n",
+    "    if False:\n",
+    "        decomp = FactorAnalysis(n_components=11)\n",
+    "        decomp.fit(trn_x)\n",
+    "        trn_x = decomp.transform(trn_x)\n",
+    "        val_x = decomp.transform(val_x)\n",
+    "        tmp_test = decomp.transform(tmp_test)\n",
+    "        tmp_features = ['pc'+str(i) for i in range(decomp.n_components)]\n",
+    "    \n",
     "    # add noise to train to reduce overfitting\n",
     "    #trn_x += np.random.normal(0, 0.01, trn_x.shape)\n",
     "    \n",
@@ -319,7 +330,7 @@
     "\n",
     "    ## importance\n",
     "    fold_importance_df = pd.DataFrame()\n",
-    "    fold_importance_df['Feature'] = features\n",
+    "    fold_importance_df['Feature'] = tmp_features\n",
     "    fold_importance_df['Importance'] = clf.feature_importances_\n",
     "    fold_importance_df['Fold'] = n_fold + 1\n",
     "    importances = pd.concat([importances, fold_importance_df], axis = 0)\n",
@@ -508,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
